adding deploy pipeline

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://daniele-murgolo.github.io/cleaning-schedule",
   "name": "cleaning-schedule",
   "version": "0.1.0",
   "private": true,
